--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "styled-components": "^6.1.19",
     "web-vitals": "^2.1.4"
   },
