--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"prop-types": "^15.8.1",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
+		"react-router-dom": "^7.12.0",
 		"sass-embedded": "^1.93.2",
 		"styled-components": "^6.1.19",
 		"web-vitals": "^5.1.0"
@@ -20,8 +21,8 @@
 		"build": "vite build",
 		"lint": "eslint .",
 		"preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d dist"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.37.0",
